[package]
name = "bit_torrent"
version = "0.1.0"
authors = ["Gedalia Kott <gedkott@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bit_torrent"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
sha1 = "0.6.0"
percent-encoding = "*"