[package]
name = "bit_torrent"
version = "0.1.0"
authors = ["Gedalia Kott <gedkott@gmail.com>"]
edition = "2018"

[[bin]]
name = "bit_torrent"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
sha1 = { version = "0.6.0", features = ["std"] }
percent-encoding = "*"
rand = "0.3.0"
utp = "*"