[package]
name = "bit_torrent"
version = "0.1.0"
authors = ["Gedalia Kott <gedkott@gmail.com>"]
edition = "2021"

[[bin]]
name = "bit_torrent"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
sha1 = { version = "0.10.0", features = ["std"] }
percent-encoding = "2.2.0"
rand = "0.8.5"
hex = "0.4.3"